...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.upsa.mimo.gamerdb.activities.MainActivity"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title=""
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        />

...
